# SentinelOps

./: .env.example  .env.production.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  render.yaml
.devcontainer/: devcontainer.json  docker-compose.codespaces.yml  verify-tools.sh
.github/workflows/: validate.yml
backend/: __init__.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/agent/: __init__.py  state.py  workflow.py
backend/app/api/: routes.py
backend/app/llm/: __init__.py  base.py  gemini_provider.py  mock_provider.py  openai_provider.py
backend/app/models/: entities.py
backend/app/policies/: command_allowlist.yaml  protected_paths.yaml
backend/app/schemas/: contracts.py
backend/tests/: conftest.py  test_api.py  test_policy.py  test_providers.py  test_state.py
data/incidents/: config.json  latency.json
demo_app/: Dockerfile  README.md  __init__.py
demo_app/app/: main.py  observability.py
demo_app/seeded_bugs/: discount_tn.patch
demo_app/tests/: test_app.py
docs/: api.md  architecture.md  demo-script.md  evaluation.md  judge-qa.md  limitations.md  safety.md  security-findings.md  submission-summary.md
frontend/: package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  competition.css  main.tsx  styles.css
sandbox/: Dockerfile  entrypoint.py  entrypoint.sh
scripts/: benchmark.py  ensure_dependencies.py  generate_traffic.py  health_check.py  prepare_sandbox.py  reset_demo.py  run_demo.py  run_demo.sh  seed_incident.py  validate_e2e.py
(+11 files in other folders)
