[project]
name = "sentinelops"
version = "0.1.0"
description = "Autonomous AI reliability engineer hackathon MVP"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1", "uvicorn[standard]>=0.30,<1", "pydantic>=2.8,<3",
  "pydantic-settings>=2.4,<3", "sqlalchemy>=2.0,<3", "httpx>=0.27,<1",
  "python-json-logger>=2,<4", "pyyaml>=6,<7"
]
[project.optional-dependencies]
dev = ["pytest>=8,<9", "pytest-cov>=5,<7", "ruff>=0.6,<1", "mypy>=1.11,<2", "bandit>=1.7,<2"]
[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"
[tool.setuptools.packages.find]
include = ["backend*", "demo_app*"]
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["backend/tests", "demo_app/tests"]
[tool.ruff]
line-length = 100
target-version = "py311"
[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501", "E701", "E702", "E703", "I001", "B008", "F403", "F405"]
[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
exclude = ["frontend"]
[tool.bandit]
exclude_dirs = ["backend/tests", "demo_app/tests"]
